Added grid change displayer and more!

--- a/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
@@ -20,7 +20,7 @@
             <MudTh></MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd Style="@ViewHelper.GetFullColourStyle(context.Colour, context.Accent)">@context.Name</MudTd>
+            <MudTd Style="@ViewHelper.SetFullColourstyle(context.Colour, context.Accent)">@context.Name</MudTd>
             <MudTd>@context.Pace</MudTd>
             <MudTd>@context.WearMax</MudTd>
             <MudTd>@context.WearMin</MudTd>
