--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -45,7 +45,7 @@ else
                         <MudTh>Penalty</MudTh>
                     </HeaderContent>
                     <RowTemplate>
-                        <MudTd Style="@(ViewHelper.GetGradientCellStyle(context.Colour, context.Accent))">
+                        <MudTd Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))">
                             @context.Grid
                         </MudTd>
                         <MudTd>@context.FullName</MudTd>
