--- a/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
@@ -10,7 +10,7 @@
         <MudButton Variant="Variant.Filled" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterTeam">New</MudButton>
     </ToolBarContent>
     <Columns>
-        <PropertyColumn Property="e => e.Name" CellStyleFunc="@ViewHelper.TeamSimpleStyleFunc" />
+        <PropertyColumn Property="e => e.Name" CellStyleFunc="@ViewHelper.TeamBorderRightStyleFunc" />
         <TemplateColumn Title="Country">
             <CellTemplate>
                 @if (context.Item.Team is not null)
