--- a/SimTECH/SimTECH/Pages/Season/Seasons.razor
+++ b/SimTECH/SimTECH/Pages/Season/Seasons.razor
@@ -100,5 +100,5 @@
     }
 
     private static Func<SeasonListModel, string> LeadingTeamStyleFunc => model 
-        => ViewHelper.GetFullColourStyle(model.TeamColour, model.TeamAccent);
+        => ViewHelper.SetFullColourstyle(model.TeamColour, model.TeamAccent);
 }
