--- a/SimTECH/SimTECH/Pages/Season/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Standings.razor
@@ -25,14 +25,14 @@ else
                                 </MudTh>
                             </HeaderContent>
                             <RowTemplate>
-                                <MudTd DataLabel="#" Style="@(ViewHelper.GetGradientCellStyle(context.Colour, context.Accent))" Class="number-col">
+                                <MudTd DataLabel="#" Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))" Class="number-col">
                                     @context.Position
                                 </MudTd>
                                 <MudTd DataLabel="Name">
                                     <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                                     @context.Name
                                 </MudTd>
-                                <MudTd DataLabel="No." Style="@(ViewHelper.GetFullColourStyle(context.Colour, context.Accent))" Class="number-col">
+                                <MudTd DataLabel="No." Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))" Class="number-col">
                                     @context.Number
                                 </MudTd>
                                 <MudTd DataLabel="PTS">@context.Points</MudTd>
@@ -54,11 +54,11 @@ else
                                 <MudTh>PTS</MudTh>
                             </HeaderContent>
                             <RowTemplate>
-                                <MudTd DataLabel="#" Style="@(ViewHelper.GetGradientCellStyle(context.Colour, context.Accent))" Class="number-col">
+                                <MudTd DataLabel="#" Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))" Class="number-col">
                                     @context.Position
                                 </MudTd>
                                 <MudTd>@context.Principal</MudTd>
-                                <MudTd Style="@(ViewHelper.GetSimpleStyle(context.Colour))">
+                                <MudTd Style="@(ViewHelper.SetBorderRightStyle(context.Colour))">
                                     <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                                     @context.Name
                                 </MudTd>
@@ -102,14 +102,14 @@ else
                         <MudTh class="number-col">AVG</MudTh>
                     </HeaderContent>
                     <RowTemplate>
-                        <MudTd Style="@(ViewHelper.GetGradientCellStyle(context.Colour, context.Accent))" Class="number-col">
+                        <MudTd Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))" Class="number-col">
                             @context.Position
                         </MudTd>
                         <MudTd>
                             <CountryFlag Code="@context.Nationality" Size="FlagSize.Tiny" />
                             @context.Name
                         </MudTd>
-                        <MudTd Style="@(ViewHelper.GetFullColourStyle(context.Colour, context.Accent))">@context.Number</MudTd>
+                        <MudTd Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">@context.Number</MudTd>
                         <MudTd>@context.Points</MudTd>
                         @for (int i = 0; i < Races.Count; i++)
                         {
@@ -150,8 +150,8 @@ else
                     <MudTh>AVG</MudTh>
                 </HeaderContent>
                 <RowTemplate>
-                    <MudTd Style="@(ViewHelper.GetGradientCellStyle(context.Colour, context.Accent))" Class="number-col">@context.Position</MudTd>
-                    <MudTd Style="@(ViewHelper.GetSimpleStyle(context.Colour))">
+                    <MudTd Style="@(ViewHelper.SetGradientTriangleStyle(context.Colour, context.Accent))" Class="number-col">@context.Position</MudTd>
+                    <MudTd Style="@(ViewHelper.SetBorderRightStyle(context.Colour))">
                         <CountryFlag Code="@context.Nationality" Size="FlagSize.Tiny" />
                         @context.Name
                     </MudTd>
