--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -179,7 +179,7 @@
     {
         Bread.SetBreadcrumbs(new List<BreadcrumbItem>()
         {
-            new BreadcrumbItem("Overview", href: "overview")
+            new BreadcrumbItem("Overview", href: $"overview/{SeasonId}"),
         });
 
         _activeTabIndex = TabIndex;
