rel is now higher

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -118,8 +118,7 @@
                             <MudTd>
                                 <MudText Typo="Typo.body2">
                                     <CountryFlag Code="@context.Country" Size="FlagSize.Tiny" />
-                                    Round:
-                                    @context.Round
+                                    Round: @context.Round
                                 </MudText>
                             </MudTd>
                             <MudTd>@context.Name</MudTd>
