--- a/SimTECH/SimTECH/Pages/Season/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Season/PowerRankings.razor
@@ -6,8 +6,21 @@
         <ToolBarContent>
             <MudText Typo="Typo.h4">Power rankings</MudText>
         </ToolBarContent>
+        <ColGroup>
+            <col />
+            <col class="number-col" />
+            <col />
+            <col />
+            <col />
+            <col />
+            <col />
+            <col />
+            <col />
+            <col />
+            <col />
+        </ColGroup>
         <Columns>
-            <TemplateColumn Title="Driver">
+            <TemplateColumn Title="Driver" Sortable="false">
                 <CellTemplate>
                     <MudText Typo="Typo.body2">
                         <CountryFlag Code="@context.Item.Nationality" Size="FlagSize.Small" />
@@ -15,28 +28,28 @@
                     </MudText>
                 </CellTemplate>
             </TemplateColumn>
-            <PropertyColumn Property="e => e.DriverNumber" Title="No." CellClass="number-col" CellStyleFunc="FullStyleFunc" />
+            <PropertyColumn Property="e => e.DriverNumber" Title="No." CellClass="number-col" CellStyleFunc="FullStyleFunc" Sortable="false" />
             <PropertyColumn Property="e => e.TeamName" Title="Team" CellStyleFunc="@SimpleCellStyle" />
             <PropertyColumn Property="e => e.Engine" />
             <PropertyColumn Property="e => e.Manufacturer" />
             <PropertyColumn Property="e => e.QualyPower" />
             <PropertyColumn Property="e => e.RacePower" />
-            <TemplateColumn Title="A/C/P">
+            <TemplateColumn Title="A/C/P" Sortable="false">
                 <CellTemplate>
                     <MudText Typo="Typo.body2">@context.Item.Aero / @context.Item.Chassis / @context.Item.Powertrain</MudText>
                 </CellTemplate>
             </TemplateColumn>
-            <TemplateColumn Title="Reliability [D/T/E]">
+            <TemplateColumn Title="Reliability [D/T/E]" Sortable="false">
                 <CellTemplate>
                     <MudText Typo="Typo.body2">@context.Item.DriverRel / @context.Item.CarRel / @context.Item.EngineRel</MudText>
                 </CellTemplate>
             </TemplateColumn>
-            <TemplateColumn Title="Wear">
+            <TemplateColumn Title="Wear" Sortable="false">
                 <CellTemplate>
                     <MudText Typo="Typo.body2">@context.Item.WearMax ↔ @context.Item.WearMin</MudText>
                 </CellTemplate>
             </TemplateColumn>
-            <TemplateColumn Title="RngMod">
+            <TemplateColumn Title="RngMod" Sortable="false">
                 <CellTemplate>
                     @if (context.Item.TraitEffect != null)
                     {
