--- a/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
+++ b/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
@@ -7,7 +7,7 @@
 <MudContainer>
     <MudGrid>
         <MudItem xs="9">
-            <MudPaper>
+            <MudPaper Class="mud-height-full">
                 @if (PartsPerDriver != null)
                 {
                     <MudTable Items="@PartsPerDriver">
@@ -52,8 +52,13 @@
             </MudPaper>
         </MudItem>
         <MudItem xs="3">
-            <MudPaper>
-
+            <MudPaper Class="mud-height-full">
+                <MudText Typo="Typo.h4">Other</MudText>
+                <MudText Typo="Typo.body2">
+                    ... Something related to this? I had an idea... but what?
+                    Optionally make the kind of incidents and such settable, including the penalties.
+                    Furthermore I suspect the upcoming penalty's and such were what I wanted to put here.
+                </MudText>
             </MudPaper>
         </MudItem>
     </MudGrid>
