--- a/SimTECH/SimTECH/Pages/_Host.cshtml
+++ b/SimTECH/SimTECH/Pages/_Host.cshtml
@@ -37,5 +37,7 @@
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.js"></script>
+    <script src="_content/Blazor-ApexCharts/js/apex-charts.min.js"></script>
+    <script src="_content/Blazor-ApexCharts/js/blazor-apex-charts.js"></script>
 </body>
 </html>
